--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "fastest-validator": "^1.6.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^6.3.4"
+    "sequelize": "^6.3.4",
+    "slug": "^3.3.4"
   },
   "devDependencies": {
     "sequelize-cli": "^6.2.0"
